--- a/.github/workflows/create-postgres.yaml
+++ b/.github/workflows/create-postgres.yaml
@@ -5,6 +5,9 @@ on:
       namespace:
         required: true
         description: "The namespace where to deploy postgres"
+env:
+  REPO_NAME: ${{ github.event.repository.name }}
+        
 jobs:
   deploy-postgres:
     runs-on: ubuntu-latest
@@ -16,7 +19,7 @@ jobs:
       - name: Create postgres
         run: |
           chmod +x deployment/scripts/create-postgres.sh
-          ./deployment/scripts/create-postgres.sh ${{ inputs.namespace }}
+          ./deployment/scripts/create-postgres.sh ${{ inputs.namespace }} ${{ env.REPO_NAME }}
       - name: Commit changes
         run: |
           git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
