--- a/.github/workflows/create-aws-rds.yaml
+++ b/.github/workflows/create-aws-rds.yaml
@@ -1,4 +1,4 @@
-name: Create postgres
+name: Create aws rds postgres
 on:
   workflow_dispatch:
     inputs:
@@ -9,7 +9,7 @@ env:
   REPO_NAME: ${{ github.event.repository.name }}
         
 jobs:
-  deploy-postgres:
+  deploy-aws-rds:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -18,14 +18,14 @@ jobs:
           fetch-depth: 0
       - name: Create postgres
         run: |
-          chmod +x deployment/scripts/create-postgres.sh
-          ./deployment/scripts/create-postgres.sh ${{ inputs.namespace }} ${{ env.REPO_NAME }}
+          chmod +x deployment/scripts/create-aws-rds.sh
+          ./deployment/scripts/create-aws-rds.sh ${{ inputs.namespace }} ${{ env.REPO_NAME }}
       - name: Commit changes
         run: |
           git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
           git add .
-          git commit -m "Create postgres ${{ inputs.namespace }}"
+          git commit -m "Create AWS RDS ${{ inputs.namespace }}"
       - name: Push changes
         uses: ad-m/github-push-action@master
         with:
