Update create postgres

--- a/deployment/templates/postgres.yaml
+++ b/deployment/templates/postgres.yaml
@@ -6,10 +6,10 @@ spec:
   id: NAME
   compositionSelector:
     matchLabels:
-      provider: aws
+      provider: PROVIDER
       db: postgresql
   parameters:
-    version: "13.4"
-    size: small
+    version: VERSION
+    size: SIZE
   writeConnectionSecretToRef:
     name: NAME
