--- a/.github/workflows/create-postgres.yaml
+++ b/.github/workflows/create-postgres.yaml
@@ -1,15 +1,27 @@
-name: Create aws rds postgres
+name: Create postgres
 on:
   workflow_dispatch:
     inputs:
-      namespace:
+      env:
         required: true
-        description: "The namespace where to deploy postgres"
+        description: "The environement ( prod or dev )"
+      provider:
+        required: true
+        description: "The Cloud Provider"
+        default: aws
+      version:
+        required: true
+        description: "The postgres version"
+        default: "15.3"
+      size:
+        required: true
+        description: "The postgres size"
+        default: small
 env:
   REPO_NAME: ${{ github.event.repository.name }}
         
 jobs:
-  deploy-aws-rds:
+  deploy-postgres:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -18,8 +30,8 @@ jobs:
           fetch-depth: 0
       - name: Create postgres
         run: |
-          chmod +x deployment/scripts/create-aws-rds.sh
-          ./deployment/scripts/create-aws-rds.sh ${{ inputs.namespace }} ${{ env.REPO_NAME }}
+          chmod +x deployment/scripts/create-postgres.sh
+          ./deployment/scripts/create-postgres.sh ${{ inputs.env }} ${{ env.REPO_NAME }} ${{ inputs.provider }} ${{ inputs.version }} ${{ inputs.size }}
       - name: Commit changes
         run: |
           git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
