--- a/deployment/app-prod/aws-pg.yaml
+++ b/deployment/app-prod/aws-pg.yaml
@@ -2,6 +2,7 @@ apiVersion: dps.cluster/v1alpha1
 kind: SQLClaim
 metadata:
   name: dps-template-prod-pg
+  namespace: prod
 spec:
   id: dps-template-prod-pg
   compositionSelector:
