--- a/deployment/templates/postgres.yaml
+++ b/deployment/templates/postgres.yaml
@@ -1,3 +1,15 @@
+---
+
+apiVersion: v1
+kind: Secret
+metadata:
+  name: NAME
+data:
+  password: PASS
+
+
+
+---
 apiVersion: dps.cluster/v1alpha1
 kind: SQLClaim
 metadata:
