--- a/deployment/templates/postgres.yaml
+++ b/deployment/templates/postgres.yaml
@@ -1,3 +1,17 @@
+apiVersion: external-secrets.io/v1beta1
+kind: ExternalSecret
+metadata:
+  name: NAME
+spec:
+  secretStoreRef:
+    kind: ClusterSecretStore
+    name: gcp-backend          
+  target:                                                             
+    name: SECRET_NAME 
+  data:                                                       
+  - secretKey: name
+    remoteRef:
+      key: db-password 
 ---
 apiVersion: dps.cluster/v1alpha1
 kind: SQLClaim
