--- a/deployment/templates/secret.yaml
+++ b/deployment/templates/secret.yaml
@@ -9,6 +9,6 @@ spec:
   target:                                                             
     name: SECRET_NAME 
   data:                                                       
-  - secretKey: name
+  - secretKey: password
     remoteRef:
       key: db-password
