--- a/deployment/templates/secret.yaml
+++ b/deployment/templates/secret.yaml
@@ -2,6 +2,8 @@ apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
   name: NAME
+  annotations:
+    argocd.argoproj.io/sync-wave: "-10"
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
