Fix typo in remote secret name

--- a/deployment/helm/app/templates/secret.yaml
+++ b/deployment/helm/app/templates/secret.yaml
@@ -35,4 +35,4 @@ spec:
   data:
     - secretKey: dns-sa-keyfile.json
       remoteRef:
-        key: dns-sa-keyfile.json
+        key: dns-sa-keyfile-json
