--- a/deployment/helm/app/templates/postgres-crossplane.yaml
+++ b/deployment/helm/app/templates/postgres-crossplane.yaml
@@ -22,7 +22,7 @@ spec:
       {{- end }}
       db: postgresql
   parameters:
-    {{- if (.Values.db.enabled.crossplane.azure) (.Values.db.enabled.crossplane.google) }}
+    {{- if or (.Values.db.enabled.crossplane.azure) (.Values.db.enabled.crossplane.google) }}
     version: "11"
     {{- end }}
     {{- if .Values.db.enabled.crossplane.aws }}
