Add secret type for ghcr

--- a/deployment/app-dev/templates/secret.yaml
+++ b/deployment/app-dev/templates/secret.yaml
@@ -13,6 +13,8 @@ spec:
   target:
     name: ghcr-credentials
     creationPolicy: Owner
+    template:
+      type: kubernetes.io/dockerconfigjson 
   data:
     - secretKey: .dockerconfigjson
       remoteRef:
