--- a/backend/src/main/resources/application.yaml
+++ b/backend/src/main/resources/application.yaml
@@ -16,9 +16,9 @@ spring:
 
   datasource:
     driver-class-name: "org.postgresql.Driver"
-    url: "jdbc:postgresql://postgres:5432/postgres"
-    username: "REPLACE_ME"
-    password: "REPLACE_ME"
+    url: "jdbc:postgresql://${DB_ENDPOINT}:${DB_PORT}/${DB_NAME}"
+    username: "${DB_USER}"
+    password: "${DB_PASS}"
 
   # disable warning
   jpa.open-in-view: false
