--- a/deployment/app-dev/templates/secret.yaml
+++ b/deployment/app-dev/templates/secret.yaml
@@ -14,11 +14,13 @@ spec:
     name: ghcr-credentials
     creationPolicy: Owner
     template:
-      type: kubernetes.io/dockerconfigjson 
+      type: kubernetes.io/dockerconfigjson
+      data:
+        .dockerconfigjson: "{{ .ghcr | toString }}"
   data:
-    - secretKey: .dockerconfigjson
-      remoteRef:
-        key: dockerconfigjson
+   - secretKey: ghcr
+     remoteRef:
+       key: dockerconfigjson
 ---
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
