--- a/deployment/app-dev/templates/secret.yaml
+++ b/deployment/app-dev/templates/secret.yaml
@@ -1,4 +1,26 @@
-
+---
+apiVersion: external-secrets.io/v1beta1
+kind: ExternalSecret
+metadata:
+  name: ghcr-credentials
+  annotations:
+    argocd.argoproj.io/sync-wave: "-10"
+spec:
+  refreshInterval: 1m
+  secretStoreRef:
+    kind: ClusterSecretStore
+    name: gcp-backend
+  target:
+    name: ghcr-credentials
+    creationPolicy: Owner
+    template:
+      type: kubernetes.io/dockerconfigjson
+      data:
+        .dockerconfigjson: "{{ .ghcr | toString }}"
+  data:
+   - secretKey: ghcr
+     remoteRef:
+       key: dockerconfigjson
 ---
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
