--- a/deployment/app-dev/templates/secret.yaml
+++ b/deployment/app-dev/templates/secret.yaml
@@ -15,8 +15,9 @@ spec:
     creationPolicy: Owner
     template:
       type: kubernetes.io/dockerconfigjson
+      engineVersion: v2
       data:
-        .dockerconfigjson: "{{ .ghcr | toString }}"
+        .dockerconfigjson: "{{ `{{ .ghcr }}` }}"
   data:
    - secretKey: ghcr
      remoteRef:
