Add providerName to values and destroy dev

--- a/deployment/templates/helm/app/templates/postgres-crossplane.yaml
+++ b/deployment/templates/helm/app/templates/postgres-crossplane.yaml
@@ -30,7 +30,7 @@ spec:
     {{- end }}
     size: {{ .Values.db.size }}
     {{- if .Values.db.enabled.crossplane.aws }}
-    providerName: {{ .Values.db.account }}
+    providerName: {{ .Values.db.providerName }}
     {{- end }}
 ---
 apiVersion: external-secrets.io/v1beta1
