--- a/.github/workflows/create-backend-db.yaml
+++ b/.github/workflows/create-backend-db.yaml
@@ -1,4 +1,5 @@
 name: Create Backend with postgreSQL instance
+run-name: backend-postgres
 on:
   workflow_dispatch:
     inputs:
@@ -59,7 +60,7 @@ jobs:
           git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
           git add .
-          git commit -m "Create AWS RDS ${{ inputs.namespace }}"
+          git commit -m "Create Backend-sql app ${{ inputs.namespace }}"
       - name: Push changes
         uses: ad-m/github-push-action@master
         with:
