--- a/.github/workflows/create-backend-db.yaml
+++ b/.github/workflows/create-backend-db.yaml
@@ -24,15 +24,16 @@ jobs:
   deploy-backend-postgres:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout
+        uses: actions/checkout@v3
       - name: Variables
+        id: vars
         run: |
           echo "VERSION=${{ github.run_number }}" >> "$GITHUB_ENV"
           echo "IMAGE=ghcr.io/digitalproductschool/${{ github.event.repository.name }}/backend" >> "$GITHUB_ENV"
-      - name: Checkout
-        uses: actions/checkout@v3
       - name: Setup pack
         id: setup-pack
-        uses: buildpacks/github-actions/setup-pack@v4.4.0tion@v2
+        uses: buildpacks/github-actions/setup-pack@v5.1.0
       - name: Login to Github Packages
         uses: docker/login-action@v2
         with:
@@ -60,7 +61,7 @@ jobs:
           git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
           git add .
-          git commit -m "Create Backend-sql app ${{ inputs.namespace }}"
+          git commit -m "Create Backend-sql app ${{ inputs.env }}"
       - name: Push changes
         uses: ad-m/github-push-action@master
         with:
