--- a/deployment/templates/helm/app/templates/secret.yaml
+++ b/deployment/templates/helm/app/templates/secret.yaml
@@ -15,10 +15,13 @@ spec:
     creationPolicy: Owner
     template:
       type: kubernetes.io/dockerconfigjson
+      engineVersion: v2
+      data:
+        .dockerconfigjson: "{{ `{{ .ghcr }}` }}"
   data:
-    - secretKey: .dockerconfigjson
-      remoteRef:
-        key: dockerconfigjson
+  - secretKey: ghcr
+    remoteRef:
+      key: docker-config-example
 ---
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
