--- a/deployment/templates/helm/app/templates/secret.yaml
+++ b/deployment/templates/helm/app/templates/secret.yaml
@@ -21,7 +21,7 @@ spec:
   data:
   - secretKey: ghcr
     remoteRef:
-      key: docker-config-example
+      key: dockerconfigjson
 ---
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
