--- a/deployment/templates/helm/app/templates/backend-ingress.yaml
+++ b/deployment/templates/helm/app/templates/backend-ingress.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.backend.enabled }}
 ---
 
 apiVersion: networking.k8s.io/v1
@@ -30,3 +31,4 @@ spec:
         - {{ .Values.ingress.host }}
       secretName: {{ template "dps-template.name" . }}-certificate
   {{- end }}
+{{- end }}
