--- a/deployment/templates/helm/backend/templates/deployment.yaml
+++ b/deployment/templates/helm/backend/templates/deployment.yaml
@@ -1,4 +1,3 @@
-{{- if .Values.backend.enabled }}
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -29,7 +28,7 @@ spec:
       - name: backend-app
         securityContext:
             {{- toYaml .Values.securityContext | nindent 12 }}
-        image: "{{ .Values.backend.image.repository }}:{{ .Values.backend.image.tag }}"
+        image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
         imagePullPolicy: {{ .Values.image.pullPolicy }}
         ports:
           - containerPort: 8080
@@ -85,4 +84,3 @@ spec:
         - name: DB_NAME
           value: {{ .Values.db.id }}
         {{- end }}
-{{- end }}
