--- a/deployment/templates/helm/frontend/templates/deployment.yaml
+++ b/deployment/templates/helm/frontend/templates/deployment.yaml
@@ -1,23 +1,22 @@
-{{- if .Values.frontend.enabled }}
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ template "dps-template.name" . }}-frontend
+  name: {{ template "frontend.name" . }}
   labels:
-    app.kubernetes.io/name: {{ template "dps-template.name" . }}-frontend
-    {{- include "dps-template.labels" . | nindent 4 }}
+    app.kubernetes.io/name: {{ template "frontend.name" . }}
+    {{- include "frontend.labels" . | nindent 4 }}
 spec:
   replicas: {{ .Values.replicas }}
   selector:
     matchLabels:
-      app.kubernetes.io/name: {{ template "dps-template.name" . }}-frontend
-      {{- include "dps-template.selectorLabels" . | nindent 6 }}
+      app.kubernetes.io/name: {{ template "frontend.name" . }}
+      {{- include "frontend.selectorLabels" . | nindent 6 }}
   template:
     metadata:
     labels:
-      app.kubernetes.io/name: {{ template "dps-template.name" . }}-frontend
-      {{- include "dps-template.selectorLabels" . | nindent 8 }}
+      app.kubernetes.io/name: {{ template "frontend.name" . }}
+      {{- include "frontend.selectorLabels" . | nindent 8 }}
     spec:
       {{- with .Values.imagePullSecrets }}
       imagePullSecrets:
@@ -29,7 +28,7 @@ spec:
       - name: frontend-app
         securityContext:
             {{- toYaml .Values.securityContext | nindent 12 }}
-        image: "{{ .Values.frontend.image.repository }}:{{ .Values.frontend.image.tag }}"
+        image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
         imagePullPolicy: {{ .Values.image.pullPolicy }}
         env:
             - name: PORT
@@ -43,4 +42,3 @@ spec:
           limits:
             memory: "1G"
             cpu: "250m"
-{{- end }}
