--- a/deployment/templates/helm/frontend/templates/ingress.yaml
+++ b/deployment/templates/helm/frontend/templates/ingress.yaml
@@ -1,10 +1,9 @@
-{{- if .Values.frontend.enabled }}
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: {{ template "dps-template.name" . }}-frontend
+  name: {{ template "frontend.name" . }}
   labels:
-    app.kubernetes.io/name: {{ template "dps-template.name" . }}
+    app.kubernetes.io/name: {{ template "frontend.name" . }}
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
     {{- if .Values.tls.enabled }}
@@ -26,5 +25,4 @@ spec:
   tls:
   - hosts:
     - {{ .Values.ingress.host }}
-    secretName: {{ template "dps-template.name" . }}-certificate
-{{- end }}
+    secretName: dps-template-certificate
