--- a/.github/workflows/create-frontend.yaml
+++ b/.github/workflows/create-frontend.yaml
@@ -41,6 +41,11 @@ jobs:
           TAG: ${{ env.VERSION }}
           DIR: ./${{ env.CONTEXT }}
 
+      - name: Create Argo App
+        run: |
+          chmod +x deployment/scripts/create-argo-app.sh
+          ./deployment/scripts/create-argo-app.sh  ${{ inputs.env }} ${{ env.CONTEXT }} 
+
       - name: Update Helm
         run: |
           chmod +x deployment/scripts/update-helm-values.sh
