--- a/deployment/app-dev/app.yaml
+++ b/deployment/app-dev/app.yaml
@@ -8,6 +8,7 @@ metadata:
 spec:
   project: dev
   source:
+    repoURL: https://github.com/DigitalProductschool/dps-template.git
     targetRevision: HEAD
     path: deployment/app-dev/backend
   destination:
