--- a/deployment/templates/argocd/app.yaml
+++ b/deployment/templates/argocd/app.yaml
@@ -7,7 +7,8 @@ metadata:
     - resources-finalizer.argocd.argoproj.io
 spec:
   project: ENVIRONMENT
-  source:                
+  source:       
+    repoURL: REPO         
     targetRevision: HEAD
     path: deployment/app-ENV
   destination:
