--- a/deployment/templates/helm/backend/templates/secret.yaml
+++ b/deployment/templates/helm/backend/templates/secret.yaml
@@ -4,7 +4,7 @@ kind: ExternalSecret
 metadata:
   name: ghcr-credentials
   annotations:
-    argocd.argoproj.io/sync-wave: "-10"
+    "helm.sh/hook-weight": "-10"
 spec:
   refreshInterval: 1m
   secretStoreRef:
@@ -28,7 +28,7 @@ kind: ExternalSecret
 metadata:
   name: clouddns-dns01-sa
   annotations:
-    argocd.argoproj.io/sync-wave: "-10"
+    "helm.sh/hook-weight": "-10"
 spec:
   refreshInterval: 1m
   secretStoreRef:
