--- a/deployment/templates/helm/frontend/Chart.yaml
+++ b/deployment/templates/helm/frontend/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: dps-template-frontend
+name: dps-frontend
 description: A Helm chart for Kubernetes
 
 # A chart can be either an 'application' or a 'library' chart.
