--- a/.github/workflows/create-ai.yaml
+++ b/.github/workflows/create-ai.yaml
@@ -10,7 +10,7 @@ on:
         required: true
         description: "Application host name"
 jobs:
-  deploy-backend-postgres:
+  deploy-ai:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -22,8 +22,21 @@ jobs:
           echo "CONTEXT=ai" >> "$GITHUB_ENV"
           echo "IMAGE=ghcr.io/digitalproductschool/${{ github.event.repository.name }}/${{ env.CONTEXT }}" >> "$GITHUB_ENV"
           echo "RUN_IMAGE=ghcr.io/digitalproductschool/${{ github.event.repository.name }}/ai-run-image" >> "$GITHUB_ENV"
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      
+      - name: Login to Github Packages
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{github.actor}}
+          password: ${{ secrets.GHCR_PAT }}
+
       - name: Build docker image and push to GitHub Container Registry
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v5
         with:
           context: ${{ env.CONTEXT }}
           file: ${{ env.CONTEXT }}/run.Dockerfile
@@ -35,12 +48,7 @@ jobs:
       - name: Setup pack
         id: setup-pack
         uses: buildpacks/github-actions/setup-pack@v5.1.0
-      - name: Login to Github Packages
-        uses: docker/login-action@v2
-        with:
-          registry: ghcr.io
-          username: ${{github.actor}}
-          password: ${{ secrets.GHCR_PAT }}
+      
       - name: Build image and push to GitHub Container Registry
         id: package
         run: |
