--- a/.github/workflows/create-backend-db.yaml
+++ b/.github/workflows/create-backend-db.yaml
@@ -30,9 +30,11 @@ jobs:
       - name: Variables
         id: vars
         run: |
-          echo "CONTEXT=backend" >> "$GITHUB_ENV"
+          echo "CONTEXT=${CONTEXT_ENV}" >> "$GITHUB_ENV"
           echo "VERSION=1.0.${{ github.run_number }}" >> "$GITHUB_ENV"
-          echo "IMAGE=ghcr.io/digitalproductschool/${{ github.event.repository.name }}/${{ env.CONTEXT }}" >> "$GITHUB_ENV"
+          echo "IMAGE=ghcr.io/digitalproductschool/${{ github.event.repository.name }}/${CONTEXT_ENV}" >> "$GITHUB_ENV"
+        env:
+          CONTEXT_ENV: ai
       - name: Setup pack
         id: setup-pack
         uses: buildpacks/github-actions/setup-pack@v5.1.0
