--- a/.github/workflows/create-ai.yaml
+++ b/.github/workflows/create-ai.yaml
@@ -15,11 +15,16 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+
+      - name: Context Variable
+        id: context_var
+        run: |
+          echo "CONTEXT=ai" >> "$GITHUB_ENV"
+
       - name: Variables
         id: vars
         run: |
           echo "VERSION=1.0.${{ github.run_number }}" >> "$GITHUB_ENV"
-          echo "CONTEXT=ai" >> "$GITHUB_ENV"
           echo "IMAGE=ghcr.io/digitalproductschool/${{ github.event.repository.name }}/${{ env.CONTEXT }}" >> "$GITHUB_ENV"
           echo "RUN_IMAGE=ghcr.io/digitalproductschool/${{ github.event.repository.name }}/ai-run-image" >> "$GITHUB_ENV"
 
@@ -76,7 +81,7 @@ jobs:
           git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
           git add .
-          git commit -m "Deploy ${{ env.CONTEXT }} to ${{ inputs.env }}"
+          git commit -m "Deploy ${{ env.CONTEXT }} to ${{ inputs.env }} 🤖"
       - name: Push changes
         uses: ad-m/github-push-action@master
         with:
