--- a/.github/workflows/create-backend-db.yaml
+++ b/.github/workflows/create-backend-db.yaml
@@ -26,15 +26,18 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      # Define env vars ( Context, Version, Image)
+      
+      - name: Context Variable
+        id: context_var
+        run: |
+          echo "CONTEXT=backend" >> "$GITHUB_ENV"
+
       - name: Variables
         id: vars
         run: |
-          echo "CONTEXT=${CONTEXT_ENV}" >> "$GITHUB_ENV"
           echo "VERSION=1.0.${{ github.run_number }}" >> "$GITHUB_ENV"
-          echo "IMAGE=ghcr.io/digitalproductschool/${{ github.event.repository.name }}/${CONTEXT_ENV}" >> "$GITHUB_ENV"
-        env:
-          CONTEXT_ENV: ai
+          echo "IMAGE=ghcr.io/digitalproductschool/${{ github.event.repository.name }}/${{ env.CONTEXT }}" >> "$GITHUB_ENV"
+
       - name: Setup pack
         id: setup-pack
         uses: buildpacks/github-actions/setup-pack@v5.1.0
@@ -70,7 +73,7 @@ jobs:
           git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
           git add .
-          git commit -m "Deploy ${{ env.CONTEXT }} to ${{ inputs.env }}"
+          git commit -m "Deploy ${{ env.CONTEXT }} to ${{ inputs.env }} 🤖"
       - name: Push changes
         uses: ad-m/github-push-action@master
         with:
