--- a/.github/workflows/create-ai.yaml
+++ b/.github/workflows/create-ai.yaml
@@ -15,6 +15,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+        with:
+          persist-credentials: false
 
       - name: Context Variable
         id: context_var
@@ -75,7 +77,7 @@ jobs:
         run: |
           chmod +x deployment/scripts/update-helm-values.sh
           ./deployment/scripts/update-helm-values.sh ${{ env.VERSION }} ${{ env.IMAGE }}  "" ${{ inputs.env }} "" "" ${{ inputs.host }} ${{ env.CONTEXT }} ""
-
+      
       - name: Commit changes
         run: |
           git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
@@ -85,5 +87,5 @@ jobs:
       - name: Push changes
         uses: ad-m/github-push-action@master
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          github_token: ${{ secrets.GH_ACTIONS_BOT_ACCESS_TOKEN}}
           branch: ${{ github.ref }}
