--- a/.github/workflows/create-hostname.yaml
+++ b/.github/workflows/create-hostname.yaml
@@ -35,14 +35,14 @@ jobs:
           KUBECONFIG=~/.kube/kubeconfig.yaml kubectl wait --for=condition=ready cluster.eks.aws.upbound.io/${{ github.event.repository.name }} --timeout=900s
       - name: Get K8s Cluster Info
         run: |
-          while ! kubectl get secret ${{ github.event.repository.name }}-cluster -n infra; do echo "Waiting for cluster secret."; sleep 1; done
+          while ! KUBECONFIG=~/.kube/kubeconfig.yaml kubectl get secret ${{ github.event.repository.name }}-cluster -n infra; do echo "Waiting for cluster secret."; sleep 1; done
           KUBECONFIG=~/.kube/kubeconfig.yaml kubectl get secret ${{ github.event.repository.name }}-cluster -n infra \
             --output jsonpath="{.data.kubeconfig}" \
             | base64 -d > kubeconfig-${{ github.event.repository.name }}.yaml
       - name: Extract Ingress
         run: |
-          KUBECONFIG=~/.kube/kubeconfig.yaml kubectl wait --for=condition=ready release ${{ github.event.repository.name }}-ingress --timeout=300s
-          while ! kubectl get svc ${{ github.event.repository.name }}-ingress-ingress-nginx-controller -n ingress-nginx; do echo "Waiting for ingress svc."; sleep 1; done
+          KUBECONFIG=kubeconfig-${{ github.event.repository.name }}.yaml kubectl wait --for=condition=ready release ${{ github.event.repository.name }}-ingress --timeout=300s
+          while ! KUBECONFIG=kubeconfig-${{ github.event.repository.name }}.yaml kubectl get svc ${{ github.event.repository.name }}-ingress-ingress-nginx-controller -n ingress-nginx; do echo "Waiting for ingress svc."; sleep 1; done
           echo "IP=$(KUBECONFIG=kubeconfig-${{ github.event.repository.name }}.yaml kubectl get svc ${{ github.event.repository.name }}-ingress-ingress-nginx-controller -n ingress-nginx --kubeconfig=kubeconfig-${{ github.event.repository.name }}.yaml | grep LoadBalancer | awk '{print $4}')" >> "$GITHUB_ENV"
       
       - name: Echo Ip
