--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -11,6 +11,7 @@ metadata:
     github.com/project-slug: ${{values.destination.owner + "/" + values.destination.repo}}
 
   tags:
-    - springboot
+    - ${{values.language | dump}}
     - postgres
     - react
+    - ${{values.provider | dump}}
