--- a/.github/workflows/create-hostname.yaml
+++ b/.github/workflows/create-hostname.yaml
@@ -24,6 +24,12 @@ jobs:
       - uses: azure/setup-kubectl@v3
       - name: Create/Verify `.kube` directory
         run: mkdir -p ~/.kube/
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_IDP_ACCESS_KEY }}
+          aws-secret-access-key: ${{ secrets.AWS_IDP_SECRET_KEY }}
+          aws-region: eu-central-1
       - name: Create kubectl config
         run: |
           cat << EOF >> ~/.kube/kubeconfig.yaml
