Add secrets to workflow 🫣

--- a/.github/workflows/create-backend-db.yaml
+++ b/.github/workflows/create-backend-db.yaml
@@ -2,6 +2,11 @@ name: Create Backend with postgreSQL instance
 run-name: backend-postgres
 on:
   workflow_call:
+    secrets:
+      GHCR_PAT:
+        required: true
+      GH_ACTIONS_BOT_ACCESS_TOKEN:
+        required: true
 
 jobs:
   deploy-backend-postgres:
