Add delete workflow in create workflow 🤠

--- a/.github/workflows/create-backend-db.yaml
+++ b/.github/workflows/create-backend-db.yaml
@@ -88,8 +88,10 @@ jobs:
           chmod +x deployment/scripts/update-helm-values.sh
           ./deployment/scripts/update-helm-values.sh ${{ env.VERSION }} ${{ env.IMAGE }}  ${{ env.provider }} ${{ env.ENV }} ${{ env.size }} ${{ env.account }} ${{ env.CONTEXT }} ${{ github.event.repository.name }}
 
-      - name: Delete env vars file
-        run: rm -rf env_vars_file.txt
+      - name: Delete env vars file & workflow file
+        run: |
+          rm -rf env_vars_file.txt
+          rm -rf .github/workflows/setup-env-backend.yaml
           
       - name: Commit changes
         run: |
